Farmacia.SRE.Challenge.Api/kubernetes/traefik/traefik-dashboard-https.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-https
  namespace: traefik
  resourceVersion: "25244"
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`cflamenco.capacitaciones.grupofarsiman.io`) && PathPrefix(`/dashboard`) || PathPrefix(`/api`)
    services:
    - kind: TraefikService
      name: api@internal
    tls:
    secretName: tls-k8s-grupofarsiman-io
